# Vibe_trading

./: .env.example  .env.oci  .gitignore  README.md  deploy_oci.sh  docker-compose.yml  main.patch  patch.diff  purge_portfolio.py  submodule.diff  test_llm.py  test_nim.py  test_yf.py  vibe_trading.service
india-trade-cli/: .dockerignore  .env.example  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  sub.patch
india-trade-cli/.github/: CODEOWNERS  pull_request_template.md
india-trade-cli/agent/: core.py  dag_orchestrator.py  deep_agent.py  ensemble_agent.py  harness.py  multi_agent.py  perplexity_finance.py  persona_agent.py  personas.py  prompts.py  quick_scan.py  schema_parser.py  schemas.py  scratchpad.py  tools.py  web_search.py
india-trade-cli/analysis/: dcf.py  feature_pipeline.py  fundamental.py  gex.py  ml_analyst.py  multi_timeframe.py  options.py  pipeline.py  technical.py  volatility_surface.py
india-trade-cli/app/: main.py  repl.py
india-trade-cli/bot/: status.py  telegram_bot.py
india-trade-cli/brokers/: angelone.py  base.py  dhan.py  fyers.py  groww.py  mock.py  session.py  upstox.py  zerodha.py
india-trade-cli/config/: credentials.py  paths.py
india-trade-cli/docker/: .env.example  Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml
india-trade-cli/docs/: commands.md  generate_cli_doc.js  generate_test_guide.js  happy-flows.md
india-trade-cli/engine/: alerts.py  audit.py  backtest.py  backtest_advanced.py  backtest_cache.py  backtest_regime.py  backtest_report.py  backtest_vectorized.py  drift.py  event_strategies.py  greeks_manager.py  memory.py  options_backtest.py  output.py  pairs.py  paper.py  paper_execute.py  patterns.py  portfolio.py  position_sizer.py  profile.py  risk_gate.py  risk_gate_context.py  risk_limits.py  risk_metrics.py  scanner.py  search.py  signal_ensemble.py  simulator.py  skill_loader.py  strategy.py  strategy_builder.py  strategy_condition_monitor.py  strategy_library.py  technical_library.py  tool_limiter.py  trade_executor.py  trader.py
india-trade-cli/macos-app/: .gitignore  electron.vite.config.mjs  package-lock.json  package.json  tailwind.config.js  vitest.config.js
india-trade-cli/market/: active_stocks.py  bulk_deals.py  disk_cache.py  earnings.py  events.py  flow_intel.py  gift_nifty.py  history.py  indices.py  macro.py  news.py  nse_scraper.py  oi_profile.py  options.py  options_scanner.py  quotes.py  sentiment.py  source_tracker.py  symbols.py  websocket.py  yfinance_provider.py
india-trade-cli/scripts/: deploy.sh
india-trade-cli/skills/: example_skill.py
india-trade-cli/specs/: 110-multi-session-ui.md  113-mid-stream-context-injection.md  122-memory-timestamps.md  123-memory-verdict-fix.md  125-openclaw-manifest.md  129-dual-broker-mode.md  135-in-app-settings-panel.md  140-automated-dmg-build.md  144-export-pdf-explain-endpoint.md  153-quick-scan-mode.md  154-174-risk-gate.md  154-hard-risk-limits.md  155-openalgo-broker-reference.md  156-backtest-comparison-report.md  157-percentage-position-sizing.md  158-vectorized-backtesting.md  159-broker-routing-visibility.md  161-strategy-marketplace.md  162-cloud-deployment-docker.md  165-named-investor-personas.md  166-multi-persona-debate.md  175-pydantic-structured-outputs.md  176-two-stage-analysis.md  177-tool-limiter.md  178-execution-broker-routing.md  179-channel-aware-prompting.md  183-fts5-search.md  184-data-fallback-chains.md  185-pinescript-export.md  187-skill-auto-discovery.md  44-interactive-strategy-builder.md  82-openai-subscription-cleanup.md  91-dual-llm-routing.md  92-reflect-and-remember.md
india-trade-cli/tests/: conftest.py  test_178_broker_routing.py  test_59b_59c.py  test_agent_core.py  test_agent_tools.py  test_ai_brain.py  test_alerts_webhook.py  test_api_broker.py  test_backtest.py  test_backtest_advanced.py  test_backtest_regime.py  test_backtest_report.py  test_backtest_vectorized.py  test_broker_quote_change.py  test_broker_roles.py  test_broker_routing_cli.py  test_broker_session_new.py  test_build_workflow.py  test_bulk_deals.py  test_channel_prompting.py  test_context_injection.py  test_credentials.py  test_dcf.py  (+70 more)
(+122 files in other folders)
